--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     },
     "scripts": {
         "build": "electron-builder --config electron-builder.json",
+        "build:run": "npm run build && npm run app",
+        "app": "cd release/win-unpacked && \"Mindustry Server Console.exe\"",
         "dev": "electron . --dev",
         "lint": "eslint src",
         "stylelint": "stylelint ./src/app/styles"
