--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
         "class-methods-use-this": "off",
         "indent": "off",
         "linebreak-style": ["error", "windows"],
+        "no-use-before-define": "off",
         "no-plusplus": ["error", {
             "allowForLoopAfterthoughts": true
         }]
