--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,26 +1,6 @@
 {
     "extends": "stylelint-config-standard",
     "rules": {
-        "indentation": 4,
-        "color-hex-case": null,
-        "max-empty-lines": null,
-        "selector-type-no-unknown": null,
-        "function-comma-space-after": null,
-        "font-family-no-missing-generic-family-keyword": null,
-        "block-opening-brace-space-before": null,
-        "block-closing-brace-empty-line-before": null,
-        "declaration-colon-space-after": null,
-        "declaration-block-single-line-max-declarations": null,
-        "declaration-empty-line-before": null,
-        "declaration-block-trailing-semicolon": null,
-        "no-descending-specificity": null,
-        "number-leading-zero": null,
-        "no-duplicate-selectors": null,
-        "selector-pseudo-element-colon-notation": null,
-        "selector-list-comma-newline-after": null,
-        "rule-empty-line-before": null,
-        "at-rule-empty-line-before": null,
-        "font-family-no-duplicate-names": null,
-        "unit-no-unknown": [true, { "ignoreUnits": ["x"] }]
+        "indentation": 4
     }
 }
